<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title"/>

            <Button
                android:id="@+id/maxPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/max_priority"/>

            <Button
                android:id="@+id/highPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/high_priority"/>

            <Button
                android:id="@+id/lowPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/low_priority"/>

            <Button
                android:id="@+id/minPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/min_priority"/>

            <Button
                android:id="@+id/defaultPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/default_priority"/>

            <Button
                android:id="@+id/oldPriority"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/old"/>

            <Button
                android:id="@+id/bigText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/big_text"/>

            <Button
                android:id="@+id/bigImage"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/big_picture"/>

            <Button
                android:id="@+id/inboxTypeNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/inbox_type"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
